# commenthub-sqr

./: .env.example  README.md  pyproject.toml  qodana.yaml  requirements.txt
.github/workflows/: code_quality.yml  workflow1.yml
api/: database.py  dependencies.py  main.py  models.py  qodana.yaml  schemas.py  settings.py  utils.py
api/crud/: __init__.py  entity.py  feedback.py  user.py  verification_token.py
api/tests/: conftest.py
front/: welcome_page.py
front/pages/: browse_content.py  create_content.py  email_verification.py
tests/: conftest.py  test_dependencies.py  test_entities.py  test_feedback.py  test_users.py
