[tool.poetry]
name = "commenthub-sqr"
version = "0.1.0"
description = ""
authors = ["dmitriypru <dmitriypru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
coverage = "^7.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
